--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "alignments>=0.1.7",
     "phonemizer>=3.2.1",
     "umap-learn>=0.5.4",
+    "numpy==1.23.5",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
